new json handler interface use and changes to methods old json handler catchable equivalence implementation debug log & json handler loggable interface Reflex_AJAX_Request (and Reflex_AJAX_Response) Component_Dataset_AJAX_Table

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -9027,6 +9027,7 @@ div.writeoff-detail
 
 .reflex-breadcrumb-select > ul
 {
+	margin	: 0em !important;
 	display	: inline-block;
 }
 
@@ -12133,3 +12134,232 @@ div.component-collections-scenario > table.reflex
 }
 
 /************************** END - Component Account Activity Log - END **************************/
+
+/************************** START - Component Debug Log - START **************************/
+
+#component-debug-log-container {
+	text-align	: right;
+}
+
+.component-debug-log > * {
+	vertical-align	: middle;
+}
+
+.component-debug-log > img {
+	margin-left	: 1em;
+}
+
+.component-debug-log-disabled-icon {
+	cursor	: default;
+	opacity	: 0.5;
+}
+
+.component-debug-log > span {
+	margin-left	: 0.25em;
+}
+
+.component-debug-log-view {
+	margin		: 0.5em 0.5em 0em 0.5em;
+	border		: solid 1px #333;
+	max-height	: 30em;
+	overflow	: auto;
+}
+
+.component-debug-log-view-string {
+	border-bottom	: solid 1px #aaa;
+	padding			: 0.25em;
+	margin			: 0em;
+}
+
+.component-debug-log-view-string:last-child {
+	border-bottom	: none;
+}
+
+.component-debug-log-view-string-old {
+	font-size	: 0.9em;
+	color		: #666;
+}
+
+/************************** END - Component Debug Log - END **************************/
+
+/************************** START - Component Test Run - START **************************/
+
+.component-test-run {
+	margin	: 0.5em;
+}
+
+.component-test-run .reflex-breadcrumb-select {
+	margin-bottom	: 0.2em;
+}
+
+.component-test-run-parameters {
+	margin	: 0em !important;
+	width	: 100% !important;
+}
+
+.component-test-run-output {
+	width	: 100%;
+}
+
+.component-test-run-output > thead > th {
+	text-align	: left;	
+}
+
+.component-test-run-output-log,
+.component-test-run-output-result {
+	width	: 100%;
+	height	: 30em;
+}
+
+/************************** END - Component Test Run - END **************************/
+
+/************************** START - Component Dataset AJAX Table - START **************************/
+
+.component-dataset-ajax-table
+{
+	position	: relative;
+	margin		: 0.5em;
+}
+
+.component-dataset-ajax-table > .component-section table.reflex.highlight-rows
+{
+	margin	: 0em;
+	width	: 100%;
+}
+
+.component-dataset-ajax-table .component-section-header .icon-button
+{
+	margin	: 0em !important;
+}
+
+.component-dataset-ajax-table .component-section-footer-actions > ul.reset
+{
+	margin	: 0em;
+}
+
+.component-dataset-ajax-table-filter-heading > span
+{
+	margin-right	: 0.5em;
+	vertical-align	: middle;
+	font-style		: italic;
+	font-size		: 0.85em;
+}
+
+.component-dataset-ajax-table-filter-heading > div
+{
+	display			: inline-block;
+	vertical-align	: middle;
+}
+
+.component-dataset-ajax-table-header-sort img
+{
+	margin-right	: 0.25em;
+}
+
+.component-dataset-ajax-table table.reflex > tbody > tr > td
+{
+	vertical-align	: middle;
+}
+
+.component-dataset-ajax-table-pagination-info {
+	padding-left	: 0.5em;
+	font-size		: 0.95em;
+}
+
+.component-dataset-ajax-table-headerrow > th {
+	white-space	: nowrap;
+}
+
+/************************** END - Component Dataset AJAX Table - END **************************/
+
+/************************** START - Popup Email Queue List - START **************************/
+
+.popup-email-queue-list table.reflex > tbody > tr > td:last-child {
+	text-align	: right;
+}
+
+/************************** END - Popup Email Queue List - END **************************/
+
+/************************** START - Component Email Preview - START **************************/
+
+.component-email-queue-email-preview {
+	margin	: 0.5em;
+}
+
+.component-email-queue-email-preview .component-section-body > div:first-child {
+	border	: none;
+}
+
+.component-email-queue-email-preview table.reflex.input {
+	margin	: 0em;
+	width	: 100%;
+}
+
+.component-email-queue-email-preview > table.reflex.input > tbody > tr > th {
+	width	: 7em;
+}
+
+.component-email-queue-email-preview-body {
+	background-color		: #fff;
+	width					: 100%;
+	margin-top				: 0.5em;
+	padding					: 0.25em;
+	height					: 30em;
+	overflow				: auto;
+	border					: solid 1px #666;
+	border-radius			: 4px 4px 4px 4px;
+	-moz-border-radius		: 4px 4px 4px 4px;
+	-webkit-border-radius	: 4px 4px 4px 4px;
+}
+
+.component-email-queue-email-preview-attachments {
+	margin	: 0em;
+}
+
+.component-email-queue-email-preview-attachments > li > img {
+	margin-right	: 0.25em;
+	vertical-align	: middle;
+}
+
+.component-email-queue-email-preview-attachments > li > span {
+	vertical-align	: middle;
+	margin-right	: 0.5em;
+}
+
+/************************** END - Component Email Preview - END **************************/
+
+/************************** START - Popup Email Queue Email Preview Send - START **************************/
+
+.popup-email-queue-email-preview-send {
+	margin	: 0.5em 0.5em 0em 0.5em;
+}
+
+.popup-email-queue-email-preview-send table.reflex.input {
+	margin	: 0em;
+	width	: 100%;
+}
+
+.popup-email-queue-email-preview-send-to-list-item > img,
+.popup-email-queue-email-preview-send-to-list-item > span {
+	vertical-align	: middle;
+}
+
+.popup-email-queue-email-preview-send-to-list-item > img {
+	cursor		: pointer;
+	margin-left	: 0.5em;
+}
+
+.popup-email-queue-email-preview-send-add-recipient {
+	padding-left	: 0em !important;
+	width			: 16px;
+}
+
+.popup-email-queue-email-preview-send-add-recipient > img {
+	margin-top	: 0.25em;
+}
+
+.popup-email-queue-email-preview-send-recipient > .control-field > input {
+	width	: 100%;
+}
+
+/************************** END - Popup Email Queue Email Preview Send - END **************************/
