added event_action_offset_days to collections_config table modified BuildLatePaymentNotice (functions.php) to use the new field created collections test class

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -12211,6 +12211,10 @@ div.component-collections-scenario > table.reflex
 	height	: 30em;
 }
 
+.component-test-run-parameter-container > tr > th {
+	white-space	: nowrap;
+}
+
 /************************** END - Component Test Run - END **************************/
 
 /************************** START - Component Dataset AJAX Table - START **************************/
