Component_Section is no longer a Flex Box, due to issues with Firefox

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -11899,6 +11899,8 @@ div.component-collections-scenario > table.reflex
 
 .component-section-header,
 .component-section-footer {
+	width	: 100%;
+	
 	display	: -webkit-box;
 	display	: -moz-box;
 	display	: box;
